--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,9 +2,9 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "crud-api"
+stack_name = "aws-crud-api"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1nl0jc0cug1jw"
-s3_prefix = "crud-api"
+s3_prefix = "aws-crud-api"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
